<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/cardview_light_background"
    android:paddingTop="50dp"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:layout_centerInParent="true"
    >

    <TextView
        android:id="@+id/login"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="32sp"
        android:textStyle="bold"
        android:text="@string/login"
    />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login"
        app:layout_constraintLeft_toLeftOf="@id/login"
        android:hint="@string/user"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="16sp"
        android:paddingTop="30dp"
        android:paddingBottom="20dp"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintLeft_toLeftOf="@+id/username"
        android:hint="@string/pass"
        android:textSize="16sp"
        android:paddingBottom="20dp"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sgn"
        app:layout_constraintLeft_toLeftOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="40dp"
        />


    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/sign_in"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/reg"
        android:paddingHorizontal="40dp"
        />

    <ImageView
        android:id="@+id/img"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_iconfinder_robot_3285302"
        android:contentDescription="@string/robot_desc"
        />

</androidx.constraintlayout.widget.ConstraintLayout>